@@ -1,8 +1,6 @@
 package thelm.packageddraconic.recipe;
 
-import java.util.Collections;
 import java.util.List;
-import java.util.Map;
 
 import org.apache.commons.lang3.ArrayUtils;
 
@@ -12,25 +10,25 @@ import it.unimi.dsi.fastutil.ints.Int2ObjectMap;
 import it.unimi.dsi.fastutil.ints.Int2ObjectOpenHashMap;
 import it.unimi.dsi.fastutil.ints.IntRBTreeSet;
 import it.unimi.dsi.fastutil.ints.IntSet;
-import net.minecraft.item.ItemStack;
-import net.minecraft.util.ResourceLocation;
-import net.minecraft.util.math.vector.Vector3i;
-import net.minecraft.util.text.IFormattableTextComponent;
-import net.minecraft.util.text.TranslationTextComponent;
-import thelm.packagedauto.api.IGuiIngredientWrapper;
+import net.minecraft.core.Vec3i;
+import net.minecraft.network.chat.MutableComponent;
+import net.minecraft.network.chat.TranslatableComponent;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.world.item.ItemStack;
 import thelm.packagedauto.api.IPackageRecipeInfo;
 import thelm.packagedauto.api.IPackageRecipeType;
-import thelm.packagedauto.api.IRecipeLayoutWrapper;
+import thelm.packagedauto.api.IRecipeSlotViewWrapper;
+import thelm.packagedauto.api.IRecipeSlotsViewWrapper;
 
 public class FusionPackageRecipeType implements IPackageRecipeType {
 
 	public static final FusionPackageRecipeType INSTANCE = new FusionPackageRecipeType();
 	public static final ResourceLocation NAME = new ResourceLocation("packageddraconic:fusion");
 	public static final IntSet SLOTS;
-	public static final List<ResourceLocation> CATEGORIES = Collections.singletonList(new ResourceLocation("draconicevolution:fusion"));
-	public static final Vector3i COLOR = new Vector3i(139, 139, 139);
-	public static final Vector3i COLOR_CENTER = new Vector3i(179, 139, 179);
-	public static final Vector3i COLOR_DISABLED = new Vector3i(64, 64, 64);
+	public static final List<ResourceLocation> CATEGORIES = List.of(new ResourceLocation("draconicevolution:fusion_crafting"));
+	public static final Vec3i COLOR = new Vec3i(139, 139, 139);
+	public static final Vec3i COLOR_CENTER = new Vec3i(179, 139, 179);
+	public static final Vec3i COLOR_DISABLED = new Vec3i(64, 64, 64);
 
 	static {
 		SLOTS = new IntRBTreeSet();
@@ -47,13 +45,13 @@ public class FusionPackageRecipeType implements IPackageRecipeType {
 	}
 
 	@Override
-	public IFormattableTextComponent getDisplayName() {
-		return new TranslationTextComponent("recipe.packageddraconic.fusion");
+	public MutableComponent getDisplayName() {
+		return new TranslatableComponent("recipe.packageddraconic.fusion");
 	}
 
 	@Override
-	public IFormattableTextComponent getShortDisplayName() {
-		return new TranslationTextComponent("recipe.packageddraconic.fusion.short");
+	public MutableComponent getShortDisplayName() {
+		return new TranslatableComponent("recipe.packageddraconic.fusion.short");
 	}
 
 	@Override
@@ -77,23 +75,27 @@ public class FusionPackageRecipeType implements IPackageRecipeType {
 	}
 
 	@Override
+	public boolean hasContainerItem() {
+		return false;
+	}
+
+	@Override
 	public List<ResourceLocation> getJEICategories() {
 		return CATEGORIES;
 	}
 
 	@Override
-	public Int2ObjectMap<ItemStack> getRecipeTransferMap(IRecipeLayoutWrapper recipeLayoutWrapper) {
+	public Int2ObjectMap<ItemStack> getRecipeTransferMap(IRecipeSlotsViewWrapper recipeLayoutWrapper) {
 		Int2ObjectMap<ItemStack> map = new Int2ObjectOpenHashMap<>();
-		Map<Integer, IGuiIngredientWrapper<ItemStack>> ingredients = recipeLayoutWrapper.getItemStackIngredients();
+		List<IRecipeSlotViewWrapper> slotViews = recipeLayoutWrapper.getRecipeSlotViews();
 		int index = 0;
 		int[] slotArray = SLOTS.toIntArray();
 		ArrayUtils.shift(slotArray, 0, 25, 1);
-		for(Map.Entry<Integer, IGuiIngredientWrapper<ItemStack>> entry : ingredients.entrySet()) {
-			IGuiIngredientWrapper<ItemStack> ingredient = entry.getValue();
-			if(ingredient.isInput()) {
-				ItemStack displayed = entry.getValue().getDisplayedIngredient();
-				if(displayed != null && !displayed.isEmpty()) {
-					map.put(slotArray[index], displayed);
+		for(IRecipeSlotViewWrapper slotView : slotViews) {
+			if(slotView.isInput()) {
+				Object displayed = slotView.getDisplayedIngredient().orElse(null);
+				if(displayed instanceof ItemStack stack && !stack.isEmpty()) {
+					map.put(slotArray[index], stack);
 				}
 				++index;
 			}
@@ -110,8 +112,8 @@ public class FusionPackageRecipeType implements IPackageRecipeType {
 	}
 
 	@Override
-	public Vector3i getSlotColor(int slot) {
-		if(!SLOTS.contains(slot) && slot != 85) {
+	public Vec3i getSlotColor(int slot) {
+		if(!SLOTS.contains(slot) && slot != 81) {
 			return COLOR_DISABLED;
 		}
 		else if(slot == 40) {
